--- a/src/components/weather/weather.css
+++ b/src/components/weather/weather.css
@@ -2,6 +2,12 @@
     font-weight: bold;
 }
 
+.home-icon {
+    padding: 1rem;
+    text-align: center;
+    float: right;
+}
+
 .temp-f {
     font-size: 28px;
     padding: 1rem;
